@@ -125,6 +125,15 @@ Defaults to: ``u'%(image)s %(hidden_field)s %(text_field)s'``
 
 Note: the three keys have to be present in the format string or an error will be thrown at runtime.
 
+CATPCHA_TEST_MODE
+------------------------
+
+New in version 0.3.6
+
+When set to True, the string "PASSED" (any case) will be accepted as a valid response to any CAPTCHA. 
+Use this for testing purposes. Warning: do NOT set this to True in production.
+
+Defaults to: False
 
 
 Generators and modifiers
