@@ -8,6 +8,7 @@ Version 0.3.6
 * Merged PR #22 - Use op.popen instead of subprocess.call to generate the audio CAPTCHA (thanks @beda42)
 * Fixed issue #10 - uniformize spelling of "CAPTCHA" (thanks @mikek)
 * Fixed issue #12 - Raise error when try to initialize CaptchaTextInput alone and/or when try to initialize CaptchaField with widget keyword argument (thanks @vstoykov)
+* Merged PR #15 - Allow a 'test mode' where the string 'PASSED' always validates the CAPTCHA (thanks @beda42)
 
 Version 0.3.5
 -------------
